feat: a table without considering the method

--- a/AnalisePeriodicidadeAgregada.ipynb
+++ b/AnalisePeriodicidadeAgregada.ipynb
@@ -2,19 +2,399 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:14: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "<>:14: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "/tmp/ipykernel_10761/3115014585.py:14: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "  lambda row: f\"{round(100 * row['mean_nmae']):.0f} \\pm {round(100*row['std_nmae']):.0f}\", axis=1\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "subpath = \"agg_function_periodic_experiment_y_original_tptt/2024-12-04T17:03:31\"\n",
+    "data = pd.read_csv(f'{subpath}/total_X.csv')\n",
+    "\n",
+    "results = (\n",
+    "    data.groupby([\"período\", \"função\"])\n",
+    "    .agg(mean_nmae=(\"nmae\", \"mean\"), std_nmae=(\"nmae\", \"std\"))\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "results[\"nmae_pm\"] = results.apply(\n",
+    "    lambda row: f\"{round(100 * row['mean_nmae']):.0f} \\pm {round(100*row['std_nmae']):.0f}\", axis=1\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>período</th>\n",
+       "      <th>função</th>\n",
+       "      <th>mean_nmae</th>\n",
+       "      <th>std_nmae</th>\n",
+       "      <th>nmae_pm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.102392</td>\n",
+       "      <td>0.015077</td>\n",
+       "      <td>10 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.118587</td>\n",
+       "      <td>0.021426</td>\n",
+       "      <td>12 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.138295</td>\n",
+       "      <td>0.024017</td>\n",
+       "      <td>14 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.125989</td>\n",
+       "      <td>0.025756</td>\n",
+       "      <td>13 \\pm 3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.149930</td>\n",
+       "      <td>0.029232</td>\n",
+       "      <td>15 \\pm 3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.247629</td>\n",
+       "      <td>0.064058</td>\n",
+       "      <td>25 \\pm 6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.120081</td>\n",
+       "      <td>0.023591</td>\n",
+       "      <td>12 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.168565</td>\n",
+       "      <td>0.037362</td>\n",
+       "      <td>17 \\pm 4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.308709</td>\n",
+       "      <td>0.092814</td>\n",
+       "      <td>31 \\pm 9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>16</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.107498</td>\n",
+       "      <td>0.021890</td>\n",
+       "      <td>11 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>16</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.151213</td>\n",
+       "      <td>0.021099</td>\n",
+       "      <td>15 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>16</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.406688</td>\n",
+       "      <td>0.091741</td>\n",
+       "      <td>41 \\pm 9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>32</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.100235</td>\n",
+       "      <td>0.022851</td>\n",
+       "      <td>10 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>32</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.130919</td>\n",
+       "      <td>0.014432</td>\n",
+       "      <td>13 \\pm 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>32</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.430716</td>\n",
+       "      <td>0.141686</td>\n",
+       "      <td>43 \\pm 14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>64</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.109173</td>\n",
+       "      <td>0.023699</td>\n",
+       "      <td>11 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>64</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.130958</td>\n",
+       "      <td>0.022317</td>\n",
+       "      <td>13 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>64</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.365828</td>\n",
+       "      <td>0.067192</td>\n",
+       "      <td>37 \\pm 7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>128</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.106450</td>\n",
+       "      <td>0.019775</td>\n",
+       "      <td>11 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>128</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.135292</td>\n",
+       "      <td>0.018518</td>\n",
+       "      <td>14 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>128</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.314891</td>\n",
+       "      <td>0.147849</td>\n",
+       "      <td>31 \\pm 15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>256</td>\n",
+       "      <td>máximo</td>\n",
+       "      <td>0.097595</td>\n",
+       "      <td>0.018440</td>\n",
+       "      <td>10 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>256</td>\n",
+       "      <td>média</td>\n",
+       "      <td>0.137818</td>\n",
+       "      <td>0.021985</td>\n",
+       "      <td>14 \\pm 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>256</td>\n",
+       "      <td>mínimo</td>\n",
+       "      <td>0.401372</td>\n",
+       "      <td>0.098922</td>\n",
+       "      <td>40 \\pm 10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    período  função  mean_nmae  std_nmae    nmae_pm\n",
+       "0         2  máximo   0.102392  0.015077   10 \\pm 2\n",
+       "1         2   média   0.118587  0.021426   12 \\pm 2\n",
+       "2         2  mínimo   0.138295  0.024017   14 \\pm 2\n",
+       "3         4  máximo   0.125989  0.025756   13 \\pm 3\n",
+       "4         4   média   0.149930  0.029232   15 \\pm 3\n",
+       "5         4  mínimo   0.247629  0.064058   25 \\pm 6\n",
+       "6         8  máximo   0.120081  0.023591   12 \\pm 2\n",
+       "7         8   média   0.168565  0.037362   17 \\pm 4\n",
+       "8         8  mínimo   0.308709  0.092814   31 \\pm 9\n",
+       "9        16  máximo   0.107498  0.021890   11 \\pm 2\n",
+       "10       16   média   0.151213  0.021099   15 \\pm 2\n",
+       "11       16  mínimo   0.406688  0.091741   41 \\pm 9\n",
+       "12       32  máximo   0.100235  0.022851   10 \\pm 2\n",
+       "13       32   média   0.130919  0.014432   13 \\pm 1\n",
+       "14       32  mínimo   0.430716  0.141686  43 \\pm 14\n",
+       "15       64  máximo   0.109173  0.023699   11 \\pm 2\n",
+       "16       64   média   0.130958  0.022317   13 \\pm 2\n",
+       "17       64  mínimo   0.365828  0.067192   37 \\pm 7\n",
+       "18      128  máximo   0.106450  0.019775   11 \\pm 2\n",
+       "19      128   média   0.135292  0.018518   14 \\pm 2\n",
+       "20      128  mínimo   0.314891  0.147849  31 \\pm 15\n",
+       "21      256  máximo   0.097595  0.018440   10 \\pm 2\n",
+       "22      256   média   0.137818  0.021985   14 \\pm 2\n",
+       "23      256  mínimo   0.401372  0.098922  40 \\pm 10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\\begin{table}[]\n",
+      "\\caption{Periodicidade TPTT em Janela-F-X.}\n",
+      "\\label{tab:}\n",
+      "\\center\n",
+      "\\begin{tabular}{|c|c|c|}\n",
+      "  \\hline\n",
+      "  Período & NMAE Média & NMAE Máximo \\\\\\hline\\hline\n",
+      "2 & $12 \\pm 2$ & $10 \\pm 2$ & $14 \\pm 2$ \\\\ \\hline\n",
+      "4 & $15 \\pm 3$ & $13 \\pm 3$ & $25 \\pm 6$ \\\\ \\hline\n",
+      "8 & $17 \\pm 4$ & $12 \\pm 2$ & $31 \\pm 9$ \\\\ \\hline\n",
+      "16 & $15 \\pm 2$ & $11 \\pm 2$ & $41 \\pm 9$ \\\\ \\hline\n",
+      "32 & $13 \\pm 1$ & $10 \\pm 2$ & $43 \\pm 14$ \\\\ \\hline\n",
+      "64 & $13 \\pm 2$ & $11 \\pm 2$ & $37 \\pm 7$ \\\\ \\hline\n",
+      "128 & $14 \\pm 2$ & $11 \\pm 2$ & $31 \\pm 15$ \\\\ \\hline\n",
+      "256 & $14 \\pm 2$ & $10 \\pm 2$ & $40 \\pm 10$ \\\\ \\hline\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:11: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "<>:11: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "/tmp/ipykernel_10761/2801383336.py:11: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "  latex_rows.append(f\"{period} & ${mean_row['nmae_pm']}$ & ${max_row['nmae_pm']}$ & ${min_row['nmae_pm']}$ \\\\\\\\ \\hline\")\n",
+      "/tmp/ipykernel_10761/2801383336.py:17: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "  print(\"\"\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_latex_table(data):\n",
+    "    periods = data[\"período\"].unique()\n",
+    "    latex_rows = []\n",
+    "\n",
+    "    for period in periods:\n",
+    "        period_data = data[data[\"período\"] == period]\n",
+    "        mean_row = period_data[period_data[\"função\"] == \"média\"].iloc[0]\n",
+    "        max_row = period_data[period_data[\"função\"] == \"máximo\"].iloc[0]\n",
+    "        min_row = period_data[period_data[\"função\"] == \"mínimo\"].iloc[0]\n",
+    "\n",
+    "        latex_rows.append(f\"{period} & ${mean_row['nmae_pm']}$ & ${max_row['nmae_pm']}$ & ${min_row['nmae_pm']}$ \\\\\\\\ \\hline\")\n",
+    "\n",
+    "    return \"\\n\".join(latex_rows)\n",
+    "\n",
+    "latex_table = create_latex_table(results)\n",
+    "\n",
+    "print(\"\"\"\n",
+    "\\\\begin{table}[]\n",
+    "\\\\caption{Periodicidade TPTT em Janela-F-X.}\n",
+    "\\\\label{tab:}\n",
+    "\\\\center\n",
+    "\\\\begin{tabular}{|c|c|c|}\n",
+    "  \\hline\n",
+    "  Período & NMAE Média & NMAE Máximo \\\\\\\\\\hline\\hline\n",
+    "\"\"\" + latex_table + \"\"\"\n",
+    "\\\\end{tabular}\n",
+    "\\\\end{table}\n",
+    "\"\"\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
