análise tola reanalisada

--- a/AnalisePeriodicidadeTolaFSTptt.ipynb
+++ b/AnalisePeriodicidadeTolaFSTptt.ipynb
@@ -2,29 +2,177 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>período</th>\n",
+       "      <th>carga</th>\n",
+       "      <th>apps</th>\n",
+       "      <th>feature</th>\n",
+       "      <th>método</th>\n",
+       "      <th>nmae</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>256</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.122973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>256</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.112905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>128</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.088573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>128</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.098349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64</td>\n",
+       "      <td>FlashcrowdLoad</td>\n",
+       "      <td>BothApps</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.107824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>8</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.100075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>4</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.102998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>4</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.097968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>2</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.103890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>2</td>\n",
+       "      <td>PeriodicLoad</td>\n",
+       "      <td>SingleApp</td>\n",
+       "      <td>DispFrames</td>\n",
+       "      <td>RF</td>\n",
+       "      <td>0.100272</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>64 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    período           carga       apps     feature método      nmae\n",
+       "0       256  FlashcrowdLoad   BothApps  DispFrames     RT  0.122973\n",
+       "1       256  FlashcrowdLoad   BothApps  DispFrames     RF  0.112905\n",
+       "2       128  FlashcrowdLoad   BothApps  DispFrames     RT  0.088573\n",
+       "3       128  FlashcrowdLoad   BothApps  DispFrames     RF  0.098349\n",
+       "4        64  FlashcrowdLoad   BothApps  DispFrames     RT  0.107824\n",
+       "..      ...             ...        ...         ...    ...       ...\n",
+       "59        8    PeriodicLoad  SingleApp  DispFrames     RF  0.100075\n",
+       "60        4    PeriodicLoad  SingleApp  DispFrames     RT  0.102998\n",
+       "61        4    PeriodicLoad  SingleApp  DispFrames     RF  0.097968\n",
+       "62        2    PeriodicLoad  SingleApp  DispFrames     RT  0.103890\n",
+       "63        2    PeriodicLoad  SingleApp  DispFrames     RF  0.100272\n",
+       "\n",
+       "[64 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "subpath = \"naive_periodic_experiment_tptt/2025-01-06T19:27:03\"\n",
-    "data = pd.read_csv(f'{subpath}/minimal_with_univariate.csv')\n"
+    "subpath = \"naive_periodic_experiment_tptt/2025-01-26T20:09:01\"\n",
+    "data = pd.read_csv(f'{subpath}/minimal_with_univariate.csv', index_col=False)\n",
+    "data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop(columns=['Unnamed: 6'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,68 +224,68 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>4</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>16</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>32</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>64</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>128</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>256</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   período  mean   std\n",
-       "0        2  11.0   2.0\n",
-       "1        4  11.0   2.0\n",
-       "2        8  11.0   2.0\n",
-       "3       16  12.0   1.0\n",
-       "4       32  13.0   3.0\n",
-       "5       64  13.0   2.0\n",
-       "6      128  12.0   4.0\n",
-       "7      256  17.0  12.0"
+       "   período  mean  std\n",
+       "0        2  12.0  1.0\n",
+       "1        4  12.0  2.0\n",
+       "2        8  12.0  2.0\n",
+       "3       16  13.0  2.0\n",
+       "4       32  14.0  3.0\n",
+       "5       64  14.0  2.0\n",
+       "6      128  14.0  6.0\n",
+       "7      256  15.0  6.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
