--- a/AnalisePeriodicidadeDistribKFold.ipynb
+++ b/AnalisePeriodicidadeDistribKFold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "11    PeriodicLoad      256  15.0  3.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "5      256  14.0  3.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,6 +343,37 @@
     "\n",
     "data['Experimento'] = 'K-Fold'\n",
     "reference_split['Experimento'] = 'Split'\n",
+    "data_combined = pd.concat([data, reference_split, ], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(14, 8))\n",
+    "sns.boxplot(x='período', y='nmae', data=data_combined, hue='Experimento')\n",
+    "\n",
+    "plt.xlabel(\"Período\", fontsize=12)\n",
+    "plt.ylabel(\"NMAE\", fontsize=12)\n",
+    "plt.title(\"NMAE Janelas com Distribuições por período\", fontsize=14)\n",
+    "plt.xticks(rotation=45)\n",
+    "y_limits = (0, 0.25)\n",
+    "plt.ylim(y_limits)\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "univariate = pd.read_csv(f'distrib_experiment_y_original_k_fold/2025-02-20T21:51:58/minimal_with_univariate.csv', index_col=False)\n",
+    "\n",
+    "data['Experimento'] = ''\n",
+    "univariate['Experimento'] = 'Split'\n",
     "data_combined = pd.concat([data, reference_split, ], ignore_index=True)\n",
     "\n",
     "\n",
