--- a/AnalisePeriodicidadeAgregadaKFold.ipynb
+++ b/AnalisePeriodicidadeAgregadaKFold.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "subpath = \"agg_function_periodic_experiment_y_original_k_fold/2025-02-17T22:21:53\"\n",
+    "subpath = \"agg_function_periodic_experiment_y_original_k_fold/2025-02-21T15:33:12\"\n",
     "data = pd.read_csv(f'{subpath}/total_X.csv', index_col=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "group = data.groupby([\"período\", \"função\"])['nmae'].agg(['mean', 'std']).reset_index()"
+    "#group = data.groupby([\"período\", \"função\"])['nmae'].agg(['mean', 'std']).reset_index()\n",
+    "group = data.groupby([\"período\"])['nmae'].agg(['mean', 'std']).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>período</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>64</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>128</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>256</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   período  mean  std\n",
+       "0        2  10.0  2.0\n",
+       "1        4  11.0  2.0\n",
+       "2        8  11.0  2.0\n",
+       "3       16  11.0  2.0\n",
+       "4       32  11.0  2.0\n",
+       "5       64  12.0  1.0\n",
+       "6      128  13.0  3.0\n",
+       "7      256  14.0  3.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group = data.groupby([\"período\", \"função\"])['nmae'].agg(['mean', 'std']).reset_index()\n",
+    "group['std'] = round(100*group['std'], 0)\n",
+    "group['mean'] = round(100*group['mean'], 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +192,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>máximo</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>média</td>\n",
@@ -89,37 +199,9 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>mínimo</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>máximo</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>média</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>4</td>\n",
-       "      <td>mínimo</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8</td>\n",
-       "      <td>máximo</td>\n",
        "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -131,37 +213,9 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>mínimo</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>16</td>\n",
-       "      <td>máximo</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>16</td>\n",
        "      <td>média</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>16</td>\n",
-       "      <td>mínimo</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>32</td>\n",
-       "      <td>máximo</td>\n",
        "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -173,114 +227,49 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>32</td>\n",
-       "      <td>mínimo</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>64</td>\n",
-       "      <td>máximo</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>64</td>\n",
        "      <td>média</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>64</td>\n",
-       "      <td>mínimo</td>\n",
        "      <td>12.0</td>\n",
        "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>128</td>\n",
-       "      <td>máximo</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>128</td>\n",
        "      <td>média</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>128</td>\n",
-       "      <td>mínimo</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>256</td>\n",
-       "      <td>máximo</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>256</td>\n",
        "      <td>média</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>256</td>\n",
-       "      <td>mínimo</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    período  função  mean  std\n",
-       "0         2  máximo  10.0  2.0\n",
-       "1         2   média  10.0  2.0\n",
-       "2         2  mínimo  10.0  2.0\n",
-       "3         4  máximo  11.0  2.0\n",
-       "4         4   média  11.0  2.0\n",
-       "5         4  mínimo  11.0  2.0\n",
-       "6         8  máximo  11.0  2.0\n",
-       "7         8   média  11.0  2.0\n",
-       "8         8  mínimo  11.0  2.0\n",
-       "9        16  máximo  11.0  2.0\n",
-       "10       16   média  11.0  2.0\n",
-       "11       16  mínimo  11.0  2.0\n",
-       "12       32  máximo  11.0  2.0\n",
-       "13       32   média  11.0  2.0\n",
-       "14       32  mínimo  11.0  2.0\n",
-       "15       64  máximo  11.0  2.0\n",
-       "16       64   média  11.0  1.0\n",
-       "17       64  mínimo  12.0  1.0\n",
-       "18      128  máximo  15.0  4.0\n",
-       "19      128   média  13.0  4.0\n",
-       "20      128  mínimo  14.0  5.0\n",
-       "21      256  máximo  14.0  4.0\n",
-       "22      256   média  14.0  3.0\n",
-       "23      256  mínimo  16.0  4.0"
+       "    período função  mean  std\n",
+       "1         2  média  10.0  2.0\n",
+       "4         4  média  11.0  2.0\n",
+       "7         8  média  11.0  2.0\n",
+       "10       16  média  11.0  2.0\n",
+       "13       32  média  11.0  2.0\n",
+       "16       64  média  12.0  1.0\n",
+       "19      128  média  13.0  3.0\n",
+       "22      256  média  15.0  3.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "group"
+    "group[group['função'] == 'média']"
    ]
   },
   {
